@@ -14,6 +14,33 @@ typedef void PmQueue;
     the message size as parameters. The queue only accepts
     fixed sized messages. Returns NULL if memory cannot be allocated.
 
+    This queue implementation uses the "light pipe" algorithm which
+    operates correctly even with multi-processors and out-of-order
+    memory writes. (see Alexander Dokumentov, "Lock-free Interprocess
+    Communication," Dr. Dobbs Portal, http://www.ddj.com/, 
+    articleID=189401457, June 15, 2006. This algorithm requires
+    that messages be translated to a form where no words contain
+    zeros. Each word becomes its own "data valid" tag. Because of
+    this translation, we cannot return a pointer to data still in 
+    the queue when the "peek" method is called. Instead, a buffer 
+    is preallocated so that data can be copied there. Pm_QueuePeek() 
+    dequeues a message into this buffer and returns a pointer to 
+    it. A subsequent Pm_Dequeue() will copy from this buffer.
+
+    This implementation does not try to keep reader/writer data in
+    separate cache lines or prevent thrashing on cache lines. 
+    However, this algorithm differs by doing inserts/removals in
+    units of messages rather than units of machine words. Some
+    performance improvement might be obtained by not clearing data
+    immediately after a read, but instead by waiting for the end
+    of the cache line, especially if messages are smaller than
+    cache lines. See the Dokumentov article for explanation.
+
+    The algorithm is extended to handle "overflow" reporting. To report
+    an overflow, the sender writes the current tail position to a field.
+    The receiver must acknowlege receipt by zeroing the field. The sender
+    will not send more until the field is zeroed.
+    
     Pm_QueueDestroy() destroys the queue and frees its storage.
  */
 
@@ -23,10 +50,11 @@ PmError Pm_QueueDestroy(PmQueue *queue);
 /* 
     Pm_Dequeue() removes one item from the queue, copying it into msg.
     Returns 1 if successful, and 0 if the queue is empty.
-    Returns pmBufferOverflow, clears the overflow flag, and does not
-    return a data item if the overflow flag is set. (This protocol
-    ensures that the reader will be notified when data is lost due 
-    to overflow.)
+    Returns pmBufferOverflow if what would have been the next thing
+    in the queue was dropped due to overflow. (So when overflow occurs,
+    the receiver can receive a queue full of messages before getting the
+    overflow report. This protocol ensures that the reader will be 
+    notified when data is lost due to overflow.
  */
 PmError Pm_Dequeue(PmQueue *queue, void *msg);
 
@@ -44,7 +72,12 @@ PmError Pm_Enqueue(PmQueue *queue, void *msg);
     Pm_QueueEmpty() returns non-zero if the queue is empty
 
     Either condition may change immediately because a parallel
-    enqueue or dequeue operation could be in progress.
+    enqueue or dequeue operation could be in progress. Furthermore,
+    Pm_QueueEmpty() is optimistic: it may say false, when due to 
+    out-of-order writes, the full message has not arrived. Therefore,
+    Pm_Dequeue() could still return 0 after Pm_QueueEmpty() returns
+    false. On the other hand, Pm_QueueFull() is pessimistic: if it
+    returns false, then Pm_Enqueue() is guaranteed to succeed. 
  */
 int Pm_QueueFull(PmQueue *queue);
 int Pm_QueueEmpty(PmQueue *queue);
